# Cardiothoracic-Ratio-X-Ray

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt  train_uck_ctr.sh
config/: config.yaml  train_config.yaml
config/experiment/: colab.yaml  slurm.yaml
config/hparams/: shenzen.yaml
data/: shenzen_cxr_dataset.py  shenzen_cxr_dm.py  uck_cxr_dataset.py  uck_cxr_dm.py
inference/models/: unet.py  unet_module.py
notebooks/: data_mean_std.ipynb  view_shenzen_dataset.ipynb
train_scripts/: train_shenzen.py  train_uck_ctr.py
training/: common_training_object.py
training/modules/: common_training_module.py  segmentation_training_module.py
utils/: CV2Reader.py  upload_weigths_callback.py
